# multi-compressor

./: .gitignore  README.md  pyproject.toml  setup.py
src/: compress.py  compress_subfolders.py  main.py
src/multi_compressor/: compress_subfolders.py  main.py
test/: test_compress.py  test_compress_subfolders.py
