[project]
name = "multi-compressor"
version = "0.1.0"
description = "A CLI tool to compress multiple folders"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Bryan Paras" }]
dependencies = [
  "click>=8.0"
]

[project.scripts]
compressor = "multi_compressor.main:compressor"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
